# P01_Notology

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: UPDATE_DEPLOYMENT.md
schemas/: base.schema.json
src/: App.css  App.tsx  HoverWindowApp.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachment_cleanup_test.rs  attachment_edge_cases_test.rs  attachment_wikilink_sync_test.rs  canvas_functionality_test.rs  canvas_memo_test.rs  html_span_wikilink_test.rs  indent_integration_test.rs  lib.rs  lib_test.rs  massive_rename_test.rs  massive_search_test.rs  memo_bottleneck_test.rs  search_latency_test.rs  synology_safety_test.rs  vault_lock.rs  wikilink_rename_test.rs  wikilink_update_massive_test.rs
src-tauri/src/frontmatter/: mod.rs  schemas.rs  suggestions.rs  types.rs
src-tauri/src/memo/: mod.rs
src-tauri/src/search/: mod.rs  parser.rs  watcher.rs
src-tauri/tests/: search_stress_test.rs  synology_sync_simulation.rs  vault_lock_test.rs
src/components/: AlertModal.tsx  AttachmentSuggestionList.tsx  Calendar.tsx  CanvasEditor.tsx  CommentPanel.tsx  ConfirmDeleteModal.tsx  ContactInputModal.tsx  ContainerView.tsx  ContextMenu.tsx  EditorContextMenu.tsx  EditorToolbar.tsx  EventInputModal.tsx  FolderTree.tsx  GraphView.tsx  HoverEditor.tsx  HoverWindowsPanel.tsx  ImageEmbedSuggestionList.tsx  KeyboardShortcuts.tsx  Search.tsx  (+24 more)
(+77 files in other folders)
