[package]
name = "app"
version = "1.0.6"
description = "Notology - Personal Knowledge Management"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
once_cell = "1.19"
regex = "1"
tantivy = "0.22"
serde_yaml = "0.9"
notify = "7"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
opener = "0.7"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
url = "2.5"
jsonschema = "0.22"
lazy_static = "1.4"
walkdir = "2.4"
rayon = "1.10"

[features]
default = ["devtools"]
devtools = ["tauri/devtools"]

[dev-dependencies]
tempfile = "3"
